syntax = "proto3";
package models;

message PeerList {
    repeated string urls = 1;
}
